syntax = "proto3";

package com.hulutas;

option java_multiple_files = true;

service InventoryService {
  rpc CheckStock (StockRequest) returns (StockResponse);
  rpc UpdateStock (StockRequest) returns (StockSaveOrUpdateResponse);
  rpc SaveStock (StockRequest) returns (StockSaveOrUpdateResponse);
}

message StockRequest {
  string product_code = 1;
  int32 quantity = 2;
}

message StockResponse {
  bool is_available = 1;
  string message = 2;
}

message StockSaveOrUpdateResponse {
  bool success = 1;
}